--- a/index.html
+++ b/index.html
@@ -1,204 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Purnama Anaking" />
+    <meta name="keyword" content="Belajar HTML, Belajar Web" />
+    <meta name="description" content="Praktikum modul 2" />
+    <meta name="robots" content="index, follow" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <!-- my css -->
-    <link rel="stylesheet" href="stylesisforblog.css" />
-
-    <title>Tugas PSI</title>
+    <title>Pengenalan HTML Tingkat Lanjut</title>
   </head>
-  <body id="home">
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow" style="background-color: rgb(131, 92, 181)">
-      <div class="container">
-        <img src="img/iconittelkom.png" width="60" height="50" style="margin-right: 15px" />
-        <a class="navbar-brand" href="#">ITTS</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Identitas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#pentingnya">Pentingnya SI</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#penggunaan">Penggunaan SI</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#manfaatdampak">Manfaat dan Dampak</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- akhir navbar -->
 
-    <!-- jumbotron -->
-    <section class="syala" id="home">
-      <div class="jumbotron jumbotron-fluid text-center">
-        <div class="abcde">
-          <img src="img/ppsisfor.jpeg" width="200px" class="rounded-circle img-thumbnail" />
-          <h1 class="display-4">Syahrina Laylia Rahma</h1>
-          <p class="lead">SI-04-01 | Nim (1204210029)</p>
-        </div>
-      </div>
-    </section>
-    <!-- akhir jumbotron -->
-    <!-- pentingnya belajar si -->
-    <section class="about" id="pentingnya">
-      <div class="container">
-        <div class="row text center pb-5">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <h2 class="text-center">Pentingnya Belajar Sistem Informasi</h2>
-            </div>
-          </div>
-        </div>
+  <body>
+    <strong>Praktikum Pemrograman Web</strong>
+    <hr />
 
-        <div class="row text center mb-4">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <p>
-                Ketika sedang mempelajari sesuatu pastilah ada benefit yang akan didapatkan. Begitu juga dengan mempelajari sistem informasi, kita bisa mendapatkan banyak manfaat. Di antaranya adalah, dengan mempelajari sistem informasi, saya akan lebih paham dan mengerti betapa pentingnya fungsi teknologi informasi dalam meningkatkan kualitas di berbagai bidang.
-              </p>
-            </div>
-          </div>
-        </div>
+    <h1>Pengenalan HTML Tingkat Lanjut</h1>
+    <hr />
 
-        <div class="row text center mb-4">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <p>
-                Namun tidak hanya itu, dengan mempelajarinya kita juga bisa menjadi seorang wirausahawan. Wirausahawan yang dimaksud adalah startup. Dengan bekal ilmu manajemen dan bisnis yang didapatkan membuat lulusan ini bisa mendirikan perusahaan rintisan (startup). Terlebih lagi bidang sistem informasi ini lebih memperhatikan kebutuhan apa yang diperlukam oleh sebuah organiasi/perusahaan. Yang mana people (orang), technology (teknologi), dan process (proses) menjadi sebuah landasan dalam mempelajari sistem informasi yang bisa digunakan untuk membangun startup itu sendiri.
-              </p>
-            </div>
-          </div>
-        </div>
+    <!-- Selanjutnya kode HTML Tulis di sini -->
 
-        <div class="row text center mb-4">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <p>
-                Jadi dapat disimpulkan bahwa bayak manfaat yang diperoleh saat kita belajar sistem informasi. Kita dipersilahkan untuk mengambil jalan yang sesuai dengan bakat dan minat maupun yang sesuai keinginan. Sistem informas juga sangatlah luas, sehingga memungkinkan untuk bekerja dimana saja. Selain prospek kerja yang luas, gaji yang didapatkan dari semua daftar pekerjaan yang bisa di lamar lulusan sistem informasi nominalnya cukup tinggi. 
-              </p>
-            </div>
-          </div>
-        </div>        
-      </div>
-    </section>
-    <!-- akhir pentingnya belajar si -->
+    <br /><br />
+    <div>
+      <hr />
+      <strong>Program Studi Sistem Informasi ITTelkom Surabaya</strong>
+    </div>
 
-    <!-- penggunaan sistem informasi -->
-    <section id="penggunaan" style="background-color: rgb(131, 92, 181)">
-      <div class="container">
-        <div class="row text center pb-5">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <h2 class="text-center">Penggunaan Sistem Informasi di 3 Bidang</h2>
-            </div>
-          </div>
-        </div>
+    <div>
+      <h2>Element Form</h2>
+      <hr />
+      <form action="" method="get">
+        <!-- Tulis elemen Form di sini -->
+        <p><input type="text" name="text_form" size="20" /></p>
+        <p><input type="text" name="text_form" size="20" placeholder="Dengan Placeholder" /></p>
+        <p><input type="text" name="readonly_form" size="20" value="Ini Readonly" readonly /></p>
+        <p><input type="text" name="disabled_form" value="Ini Disabled" size="20" disabled /></p>
+        <p><input type="text" name="required_form" size="20" required placeholder="Ini Required" /></p>
 
-        <div class="row text center mb-4">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <p>
-                Sistem informasi sudah banyak sekali berkontribusi di berbagai bidang. Beberapa diantaranya adalah bidang maritim, transportasi, serta logistik. Hal ini sudah merupakan kebutuhan wajib disebuah perusahaan maupun instansi. Yangmana digunakan untuk menunjang proses peningkatan  kualitas layanan demi tujuan serta kebaikan dari perusahaan tersebut. Dalam bidang maritim penggunaan sistem informasi salah satunya adalah sistem operasi deteksi berbasis teknologi informasi. Sistem tersebut diciptakan  untuk mengurangi resiko terjadinya pelanggaran di wilayah laut Indonesia yang akan berdampak pada kestabilan kemanan.
-              </p>
-            </div>
-          </div>
-        </div>
+        <p><input type="email" name="email_form" size="20" placeholder="Ini Email" /></p>
+        <p><input type="password" name="password_form" size="20" placeholder="Ini Password" /></p>
+        <p><input type="file" name="file" /></p>
+        <p><input type="hidden" name="hidden_form" value="123456" /></p>
 
-        <div class="row text center mb-4">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <p>
-                Dalam bidang transportasi, sistem informasi juga telah berkontribusi. Contoh hal yang paling dekat dengan kita adalah go-jek/grab. Aplikasi tersebut sangat popular pada beberapa waktu yang lalu. Dan tentu sampai sekarang masih banyak yang menggunakan aplikasinya. Beberapa fitur layanan yang disediakan oleh aplikasi tersebut sangat dirasakan oleh masyarakat dari berbagai kalangan, bahkan dari anak-anak, remaja, dewasa, sampai lansia. Aplikasi ini sangat memudahkan customer dalam mencari infomasi serta menuju tempat yang ingin dituju dengan sangat cepat, mudah, dan nyaman. User juga bisa mengetahui berapa nominal yang harus dibayarkan dengan mentukan lokasi mana yang dituju/dibutuhkan.
-              </p>
-            </div>
-          </div>
-        </div>
+        <p>
+          <textarea name="textarea_form" cols="30" rows="5" placeholder="Ini Textarea"></textarea>
+        </p>
 
-        <div class="row text center">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <p>
-                Sedangkan dalam bidang logistik, salahsatu yang termasuk adalah web penyedia jasa logistik yang mana bisa memunculkan nominal harga yang ditetapkan untuk proses pengadaan barang. Sistem ini bisa mengolah banyak data serta mendapatkan informasi yang akurat dari hasil pengolahan data yang didapat. Tentu hal ini dapat mendukung proses bisnis dari perusahaan tersebut, dimana informasi tersebut dipergunakan untuk pengambilan suatu keputusan dalam kegiatan bisnis. Teknologi yang dipakai adalah sebuah sistem jaringan yang memungkinkan komunikasi didalamnya dan akan sangat perlukan agar bisnis tersebut menjadi lebih efektif dan efisien.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-    <!-- akhir penggunaan sistem informasi -->
-    
-    <!-- manfaat dan dampak sistem informasi -->
-    <section id="manfaatdampak" style="background-color: white;">
-      <div class="container">
-        <div class="row text center pb-5">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <h2 class="text-center">Manfaat dan Dampak dalam 3 Bidang</h2>
-            </div>
-          </div>
-        </div>
+        <p>
+          <select name="pilihan">
+            <option value="1">Pilihan 1</option>
+            <option value="2" selected>Pilihan 2</option>
+            <option value="3">Pilihan 3</option>
+            <option value="4">Pilihan 4</option>
+            <option value="5">Pilihan 5</option>
+          </select>
+        </p>
+        <p><input type="radio" name="radio" value="radio1" id="radio1" checked /><label for="radio1">Radio 1</label> <input type="radio" name="radio" value="radio2" id="radio2" /><label for="radio2">Radio 2</label></p>
 
-        <div class="row text center mb-4">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <p>
-                Dalam bidang maritim ada beberapa manfaat yang di dapatkan dari penggunaan sistem informasi. Manfaat tersebut diantaranya adalah  bisa meminimalisir perusakan habitat ekosistem laut saat akan menangkapnya. Selain itu juga bisa melakukan mengamati daerah manakah yang akan mengalami pasang surut air laut, sehingga akan meminimalisir kemungkinan terburuk yang akan terjadi. Manfaat yang sangat ini sudah dirasakan oleh masyarakat sekitar adalah tempat wisata bawah laut yang dijadikan sarana hiburan/rekrasi, serta juga menjadi sarana tempat belajar lebih banyak lagi mengenai bawah laut. Untuk sekarang ini dampak yang ditimbulkan masih belum dirasakan, namun mungkin dari segi biaya akan membutuhkan dana yang besar untuk menunjang segala kebutuhan wilayah maritim NKRI menggunakan sistem informasi yang canggih.
-              </p>
-            </div>
-          </div>
-        </div>
+        <p>
+          <input type="checkbox" name="checkbox1" value="checkbox1" id="checkbox1" /><label for="checkbox1">Checkbox 1</label> <input type="checkbox" name="checkbox2" value="checkbox2" id="checkbox2" /><label for="checkbox2"
+            >Checkbox 2</label
+          >
+        </p>
 
-        <div class="row text center mb-4">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <p>
-                Sedangkan dalam bidang transportasi juga ada beberapa manfaat yang didapat. Seperti yang dirasakan, dengan adanya aplikasi go-jek/grab sangatlah memudahkan customer dalam beberapa hal. Bagaimana tidak aplikasi tersebut sangat mudah untuk digunakan, contohnya saat kita ingin keluar terburu-buru, kita tidak perlu kesusahan mencari ojek atau angkutan umum lainnya, kita hanya perlu order melalui smartphone dan dalam waktu dekat pesanan kita akan diproses. Selain itu sebelum melakukan transaksi kita bisa mengetahui berapa tarif yang ditetapkan untuk pesanan kita, jadi jika dirasa harganya mahal/tidak cukup dengan budget kita bisa memutuskan apakah jadi order atau tidak. Aplikasi ini juga berberan penting untuk kemajuan perekonomian Indonesia dalam bidang transportasi. Banyak masyarakat yang awalnya pengangguran bisa mendapatkan pekerjaan dengan mudah.  Sehingga dapat disimpulkan bahwa aplikasi ini membantu customer serta driver dalam memenuhi kebutuhannya masing-masing. Untuk dampak yang dirasakaan saat ini mungkin dalam segi keamanan kurang terjamin, sehingga menimbulkan kekhawatiran.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row text center mb-4">
-          <div class="col-lg-12">
-            <div class="asdjkl">
-              <p>
-                Yang terakhir adalah manfaat dalam bidang logistik. Sistem informasi memberikan manfaat yaitu diantaranya adalah memberikan kemudahan saat mengelola data-data dan informasi logistik. Kemudian data tersebut akan dipakai untuk banyak keperluan seperti analisis kebutuhan barang, analisis proses distribusi,  serta kelancaran ketika pembuatan laporan kebutuhan dan pendistribusian. Informasi-informasi akurat yang didapatkan bisa digunakan sebagai sarana dalam pengambilan keputusan. Selain itu dengan adanya sistem informasi dibidang logistic ini akan lebih meminimalisir biaya operasional yang dikeluarkan oleh perusahaan. Hal tersebut dikarenakan perusahaan bisa terhubung satu dengan yang lainnya menggunakan jaringan yang sudah terintegrasi sehingga memungkinkan untuk bertukar data serta informasi logistik dalam waktu yang cepat dengan mitra bisnis perushaan yang menjadikan lebih efektif dan efisien. Untuk dampak yang ditimbulkan mungkin saat ini yang paling banyak dijumpai adalah pengurangan/pemecatan pegawai dikarenakan posisinya yang sudah tergantikan.
-              </p>
-            </div>
-          </div>
-        </div>
-    </section>
-    <!-- akhir manfaat dan dampak dalam 3 bidang -->
-
-    <!-- footer -->
-    <footer class="text-center text-white pb-2">
-      <p>Created with  by <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
-        <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
-      </svg> <a href="https://www.instagram.com/syhrinaalr/" class="text-white fw-bold">Syahrina Laylia Rahma</a></p>
-    </footer>
-    <!-- akhir footer -->
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
+        <p>
+          <input type="reset" value="Reset" />
+          <input type="submit" value="Simpan" />
+          <input type="button" value="Button" onclick="" />
+        </p>
+      </form>
+    </div>
+    <div>
+      <h2>Element Embed</h2>
+      <hr />
+      <embed src="assets/file.pdf" width="800" height="1000" type="application/pdf" />
+    </div>
+    <div>
+      <h2>Elemen Object</h2>
+      <hr />
+      <object data="assets/file.pdf" width="800" height="1000" type="application/pdf"></object>
+    </div>
+    <div>
+      <h2>Element Iframe</h2>
+      <hr />
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/QIas1H7H_m0"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
+    <div>
+      <h2>Element Semantic HTML5</h2>
+      <hr />
+      <header>Ini Header</header>
+      <main>Ini Main</main>
+      <section>Ini Section</section>
+      <aside>Ini Aside</aside>
+      <nav>Ini Nav</nav>
+      <footer>Ini Footer</footer>
+    </div>
   </body>
 </html>
